tdf#97416: fix Database password properties in ODB file not re-settable via UI

Just call save_state() of the checkbox

Change-Id: I3fa434b080efdcd284fba8e2f73d8e4846870576